# economics

./: .gitignore  .pre-commit-config.yaml  ADDING_SERIES.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: csv-lint.yml  deploy-viz.yml  generate-pat.yml  lint.yml  update-user-list.yml  update.yml
data/: metadata.json
data/derived/: cpiaucsl_mom.csv  cpiaucsl_yoy.csv  cpilfesl_mom.csv  cpilfesl_yoy.csv  pcepi_mom.csv  pcepi_yoy.csv  pcepilfe_mom.csv  pcepilfe_yoy.csv  ppifes_mom.csv  ppifes_yoy.csv  ppifid_mom.csv  ppifid_yoy.csv  w875rx1_yoy.csv
data/raw/: brent_futures_curve.csv  ccsa.csv  civpart.csv  cpiaucsl.csv  cpilfesl.csv  dcoilbrenteu.csv  dfedtarl.csv  dfedtaru.csv  dspi.csv  fedfunds.csv  gdp.csv  gs10.csv  gs2.csv  gs20.csv  gs30.csv  hhmsdodns.csv  icsa.csv  jtshir.csv  lns11300001.csv  lns11300002.csv  lns11327659.csv  lns11327660.csv  lns11327662.csv  lns11327689.csv  lns13008397.csv  lns14000012.csv  lns14000036.csv  lns14000089.csv  lns14024230.csv  mich.csv  mvloas.csv  nonrevsl.csv  nyfed_auto.csv  nyfed_credit_card.csv  nyfed_he_revolving.csv  nyfed_mortgage.csv  nyfed_other.csv  nyfed_student.csv  nyfed_total.csv  pce.csv  (+20 more)
docs/: collection.md  color-palette.md  setup.md
src/: bls.py  chart.py  cli.py  config.py  derive.py  fred.py  nyfed.py  oil.py  readme_updater.py  sparkline.py
tests/: check_viz_build.js  test_freshness.py
viz/: package.json  pnpm-lock.yaml  svelte.config.js
viz/src/: app.html
viz/src/routes/: +page.server.js  +page.svelte  LazyChart.svelte  (+1 more)
