[project]
name = "economics"
version = "1.0.0"
description = "To collect various economic based metrics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fredapi==0.5.2",
    "matplotlib==3.10.9",
    "polars==1.40.1",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
]
