[project]
name = "economics"
version = "1.0.0"
description = "To collect various economic based metrics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fredapi==0.5.2",
    "matplotlib==3.11.0",
    "openpyxl>=3.1.5",
    "polars==1.41.2",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.1.1",
]
